# t2s

./: .read.swp  .readthedocs.yml  .readthedocs.yml.swo  .readthedocs.yml.swp  README.md  setup.cfg  setup.py
docs/: .cc.swp  .cli.rst.swp  .conf.py.swo  .conf.py.swp  .contributing.rst.swp  .tokenizer.rst.swp  Makefile  cc  cli.rst  conf.py  index.rst  module.rst  tokenizer.rst
requirements/: .docs.txt.swp  dev.txt
scripts/: .gen_langs.py.swp
src/t2s/: .__init__.py.swp  .tts.py.swp  .version.py.swp  __init__.py  cli.py  lang.py  langs.py  tts.py  utils.py
src/t2s/tokenizer/: pre_processors.py  tokenizer_cases.py
