[metadata]
name = t2s
description = t2s(Text-to-Speech), a Python library and CLI tool to interface with Google Translate text-to-speech API
author = Gerrishon Sirere
author_email = secretum-inc@pm.me
url = https://github.com/secretum-inc/t2s
license = MIT
keywords =
  t2s
  text to speech
  Google Translate
  T2S
classifiers =
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: MacOS
  Operating System :: Unix
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Microsoft :: Windows
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Software Development :: Libraries
  Topic :: Multimedia :: Sound/Audio :: Speech
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  six
  quo
  requests

[options.extras_require]
tests =
  pytest == 4.6.11
  pytest-cov
  flake8
  testfixtures
  mock
  six
docs =
  sphinx
  sphinx-autobuild
  sphinx_rtd_theme
  sphinx-click
  towncrier

[options.entry_points]
console_scripts =
  t2s-cli = t2s.cli:t2s_cli

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
ignore = W605, W503, W504

[coverage:run]
cover_pylib = false
omit =
  */site-packages/*
  t2s/tests/*
  t2s/tokenizer/tests/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  log.debug
  log.warning
